# contrace

./: .gitignore  README-KO.md  README.md  pyproject.toml
contrace/: __main__.py  artifacts.py  cli.py  config.py  detect.py  errors.py  image.py  init_gen.py  intake.py  paths.py  rootfs.py  runtime.py  subprocess.py  vm.py
examples/: contrace.yml
examples/httpd-smoke/: Dockerfile
kernel/x86_64/: artifact-url.txt  config
scripts/: build-kernel.sh  fetch-kernel.sh  validate-wargame-zips.py
static/src/: contrace-child-wrap.c  contrace-exec.c
static/x86_64/: contrace-child-wrap  contrace-exec  gdbserver  trace-cmd
tests/unit/: test_artifacts.py  test_cli.py  test_config.py  test_detect.py  test_init_gen.py  test_intake.py  test_rootfs.py  test_runtime.py  test_vm.py
