[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contrace"
version = "0.1.0a0"
description = "CTF container rehoster with a traceable guest kernel"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
contrace = "contrace.cli:main"

[tool.setuptools]
packages = ["contrace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
